Fix table alignment

--- a/grayws/static/style.css
+++ b/grayws/static/style.css
@@ -8,11 +8,32 @@ h1, h2, h3, h4 {
   font-weight: 100;
 }
 
-th.headers {
+th.headers td {
   font-weight: 100;
   text-align: left;
   padding: 0;
   border: 0;
+}
+
+td.action {
+  width: 75px;
+}
+
+td.type {
+  width: 425px;
+}
+
+td.resource {
+  width: 425px;
+  text-align: left;
+}
+
+th td.resource {
+  padding-left: 5px;
+}
+
+td.replacement {
+  width: 100px;
 }
 
 table.change-set, table.drift {
@@ -81,12 +102,18 @@ li.expected pre, li.actual pre {
   margin-bottom: 0;
 }
 
-table.change-set tr.change-set td.action, td.action {
-  padding-right: 25px;
+th td.replacement {
+  padding-left: 25px;
 }
 
 table.change-set tr.change-set td.replacement, td.replacement {
-  padding-left: 25px;
+  padding-left: 20px;
+  padding-right: 3px;
+}
+
+
+tr.change-set td.replacement {
+  text-align: left;
 }
 
 tr.compare td pre, tr.differences td pre {
